# snake

./: .cursorrules  README.md  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_SUMMARY.md  TEST_SUITE_REPORT.md  VERIFICATION_COMPLETE.md  getting-started.md  index.md  snake_paper.md  snake_plan.md
docs/algorithm/: canonical-form.md  fitness-evaluation.md  overview.md  priming-strategy.md  pruned-bfs.md
docs/api/: analysis.md  benchmarks.md  core.md  search.md  utils.md
docs/architecture/: data-structures.md  memory-management.md  module-dependencies.md  package-structure.md
docs/diagrams/: algorithm-flow.md  data-flow.md  package-architecture.md  search-tree.md
docs/guides/: advanced-usage.md  basic-usage.md  performance-tuning.md  visualization.md
docs/theory/: complexity-analysis.md  hamming-distance.md  hypercube-graphs.md  snake-constraints.md
output/crack_results/: dimension_11_20251106_155403.json  dimension_12_best.json  dimension_13_20251106_155404.json  dimension_14_20251106_155759.json  dimension_15_best.json  dimension_16_20251106_162116.json  summary_report_parallel.md
output/data/: analysis_results.json  analysis_results_comprehensive.json  analysis_summary.csv  statistics.json
output/reports/: analysis_report.html  analysis_report.md  feasibility_analysis.md  performance_report.md  validation_report.md
snake_in_box/: AGENTS.md  __init__.py
snake_in_box/analysis/: AGENTS.md  __init__.py  analyze_dimensions.py  dimension_feasibility.py  exponential_analysis.py  reporting.py
snake_in_box/benchmarks/: AGENTS.md  __init__.py  known_snakes.py  performance.py
snake_in_box/core/: AGENTS.md  __init__.py  (+5 more)
(+47 files in other folders)
