[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-in-box"
version = "0.1.0"
description = "N-dimensional snake-in-the-box algorithm implementation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Snake-in-the-Box Contributors"}
]
keywords = ["snake-in-the-box", "hypercube", "combinatorial-optimization", "graph-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.3.0",
]
profiling = [
    "memory-profiler>=0.60.0",
]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.3.0",
    "memory-profiler>=0.60.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/snake"
Documentation = "https://github.com/yourusername/snake#readme"
Repository = "https://github.com/yourusername/snake"
"Bug Tracker" = "https://github.com/yourusername/snake/issues"

[tool.setuptools]
packages = ["snake_in_box"]

[tool.pytest.ini_options]
testpaths = ["snake_in_box/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

